--- a/src/scss/element/form/_form_component.scss
+++ b/src/scss/element/form/_form_component.scss
@@ -2,6 +2,7 @@
 @use '../form/_checkbox_module'; // 复选框样式
 @use '../form/_btn_module'; // 按钮样式
 @use '../form/_upload_attachments_module'; // 上传附件样式
+@use '../form/_select_module'; // 下拉选择器样式
 
 /* 表单样式 */
 
