--- a/src/scss/element/form/_upload_attachments_module.scss
+++ b/src/scss/element/form/_upload_attachments_module.scss
@@ -5,7 +5,7 @@
         width: 100%;
         background-color: var(--bl);
         border: 1px dashed var(--bc);
-        background-image: url(/src/images/img-86.png);
+        background-image: url(../images/img-86.png);
         background-repeat: no-repeat;
         background-position: right bottom;
         height: 4.9rem;
