--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -444,7 +444,7 @@
             .a4-5_jx {
                 border-radius: 0.08rem;
                 background-color: var(--bc);
-                background-image: url(/src/images/img-61.jpg);
+                background-image: url(../images/img-61.jpg);
                 background-repeat: no-repeat;
                 background-position: right top;
                 width: 84%;
