--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -3,7 +3,7 @@
 .se1 {
     .se1_box {
         height: 74vh;
-        background-image: url(/src/images/img-78.png);
+        background-image: url(../images/img-78.png);
         background-size: cover;
         border-radius: 0.16rem;
     }
