--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3042,6 +3042,90 @@ body {
   cursor: no-drop;
 }
 
+.fancy {
+  padding: 0.4rem 0.15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 12;
+  background: rgba(247, 247, 247, 0.9);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: all var(--ease) 0.3s;
+}
+@media screen and (max-width: 768px) {
+  .fancy {
+    padding: 1rem 0.15rem;
+  }
+}
+.fancy .fancy_popup {
+  max-width: 6rem;
+  width: 100%;
+  background: var(--w);
+  border-radius: 0.2rem;
+  overflow: hidden;
+  padding: 0.4rem 0.4rem;
+  margin: 0 auto;
+  box-shadow: var(--boxShadow);
+}
+@media screen and (max-width: 768px) {
+  .fancy .fancy_popup {
+    max-width: none;
+  }
+}
+.fancy .fancy_info {
+  display: flex;
+  flex-direction: column;
+}
+.fancy .fancy_info p {
+  color: #666;
+}
+.fancy .fancy_info p a {
+  color: var(--p);
+}
+.fancy .fancy_info p a:hover {
+  text-decoration: underline;
+}
+.fancy .fancy_info h2 {
+  line-height: 1.2;
+}
+.fancy .fancy_close svg {
+  height: auto;
+  width: 0.22rem;
+}
+.fancy .fancy_close:hover {
+  background: var(--bg);
+}
+.fancy.fancy-show {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: inherit;
+}
+
+.fancy form {
+  height: calc(100% - 1rem);
+  overflow-y: scroll;
+  padding-bottom: 0.4rem;
+}
+.fancy form::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+.fancy form::-webkit-scrollbar-thumb {
+  width: 0px;
+  border-radius: 0px;
+}
+
 .cascade_module {
   --cascader-primary-color: #f6f7f8;
   --cascader-background-color: #f6f7f8;
@@ -5676,7 +5760,7 @@ form .code_img {
   padding: 0.2rem 0;
 }
 .quote_require .q_title {
-  padding: 0.35rem 0;
+  padding: 0.3rem 0;
 }
 .quote_require .q_title p span {
   color: var(--bc);
@@ -5975,6 +6059,403 @@ form .code_img {
 
 .quote_btn {
   background-color: var(--bl);
+}
+
+.login_Box {
+  display: flex;
+  background: linear-gradient(0deg, #b5d0f5, #e5f0fe);
+  padding-top: 1rem;
+}
+.login_Box .login_Boxcont {
+  background: var(--f);
+  border-radius: 0.16rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  min-height: 3rem;
+  box-shadow: 0px 0.1rem 0.5rem 0px rgba(21, 74, 147, 0.15);
+  padding: 0.8rem;
+  position: relative;
+}
+.login_Box .login_Boxcont .title .t {
+  margin-bottom: 0.1rem;
+  line-height: 1.2;
+}
+.login_Box .login_Boxcont .title .s {
+  color: var(--6);
+}
+.login_Box .login_Boxcont .title img {
+  width: 2.73rem;
+  margin-bottom: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+}
+.login_Box .login_Boxcont form {
+  margin-top: 0.5rem;
+}
+.login_Box .login_Boxcont .registerlink {
+  position: absolute;
+  right: 0.3rem;
+  top: 0.2rem;
+}
+.login_Box .login_Boxcont .registerlink a {
+  text-decoration: underline;
+}
+.login_Box .login_Boxcont .registerlink a:hover {
+  color: var(--bc);
+}
+.login_Box .login_Boxcont .otherLink a:hover {
+  color: var(--bc);
+}
+.login_Box .login_contact {
+  max-width: 6rem;
+  width: 100%;
+}
+.login_Box .login_contact .title {
+  border-bottom: 0.01rem solid #b1c6e2;
+  margin-bottom: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-top: 0.7rem;
+}
+.login_Box .login_contact .c_contact_way {
+  padding-top: 0.1rem;
+}
+.login_Box .login_contact .c_contact_way .c_contact_way_xin {
+  grid-template-columns: 0.3rem 1fr;
+  gap: 0.15rem;
+}
+.login_Box .login_contact .c_contact_way img {
+  width: 0.22rem;
+  height: 0.22rem;
+  transform: translateY(0.02rem);
+}
+.login_Box .login_contact .threeico {
+  border-radius: 0.08rem;
+  position: relative;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 0.01rem solid #fff;
+  margin-top: 0.4rem;
+}
+.login_Box .login_contact .threeico .th_item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex: 1;
+  padding: 0 0.2rem;
+  position: relative;
+  z-index: 2;
+}
+.login_Box .login_contact .threeico img {
+  width: 1.1rem;
+  height: 1.1rem;
+}
+.login_Box .login_contact .threeico::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0.85rem;
+  width: 80%;
+  margin: 0 auto;
+  border-top: 0.01rem dashed #fff;
+}
+
+.forgot_password .container {
+  max-width: 5.6rem;
+  background: var(--f);
+  border-radius: 0.08rem;
+  min-height: 1rem;
+}
+.forgot_password .title {
+  padding: 0.3rem 0;
+  border-bottom: 0.01rem solid var(--d);
+}
+.forgot_password .title img {
+  width: 0.12rem;
+  cursor: pointer;
+}
+.forgot_password .content {
+  padding-top: 0.5rem;
+}
+.forgot_password .content img {
+  width: 1.3rem;
+  margin: 0 auto;
+  display: flex;
+  transition: all var(--ease) 0.3s;
+}
+.forgot_password .content img:hover {
+  transform: scale(1.1);
+}
+.forgot_password .content p {
+  max-width: 4.4rem;
+}
+.forgot_password .content .tellink {
+  font-size: 0.24rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  color: var(--bc);
+  font-family: "Poppins-Medium";
+  transition: all var(--ease) 0.3s;
+}
+.forgot_password .content .tellink:hover {
+  color: var(--ac);
+}
+
+.grzx .grzx_1 {
+  width: 100%;
+  background-color: var(--bl);
+  background-image: url(/src/images/img-86.png);
+  background-repeat: no-repeat;
+  background-position: right -0.4rem;
+  justify-content: space-between;
+  gap: 0.12rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0.4rem;
+}
+.grzx .grzx_1 + .dingdantop {
+  margin-top: 0.6rem;
+}
+.grzx .grzx_1 .xx {
+  display: flex;
+  justify-content: space-between;
+}
+.grzx .grzx_1 ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.1rem;
+}
+.grzx .grzx_1 ul li p {
+  display: flex;
+  gap: 0.1rem;
+}
+.grzx .grzx_1 ul li span {
+  min-width: 1.2rem;
+  display: flex;
+}
+.grzx .grzx_1 a {
+  display: flex;
+  gap: 0.1rem;
+  white-space: pre;
+}
+.grzx .grzx_1 a img {
+  width: 0.08rem;
+}
+
+.dingdantop .xiangxi {
+  display: flex;
+  align-items: center;
+  gap: 0.1rem;
+  margin-bottom: 0.15rem;
+  margin-top: 0.4rem;
+}
+.dingdantop .xiangxi li {
+  display: flex;
+  gap: 0.1rem;
+  font-size: 0.14rem;
+}
+.dingdantop .xiangxi li:first-child span {
+  color: var(--bc);
+}
+.dingdantop .xiangxi li + span {
+  font-size: 0.12rem;
+  color: var(--9);
+}
+.dingdantop .dingdan {
+  background-color: var(--f);
+}
+.dingdantop .dingdan .t {
+  height: 0.6rem;
+  background: var(--bc);
+  color: var(--f);
+  line-height: 0.6rem;
+  padding: 0 0.2rem;
+  display: grid;
+  grid-template-columns: 1rem 2rem 1.8rem 1fr 1.6rem 2rem 2rem 1rem;
+}
+.dingdantop .dingdan .t p {
+  padding: 0 0.15rem;
+}
+.dingdantop .dingdan .b_list {
+  padding: 0.2rem;
+  border: 0.01rem solid var(--d);
+  overflow: hidden;
+  border-radius: 0.08rem;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.dingdantop .dingdan .b_list .b_item {
+  display: grid;
+  grid-template-columns: 1rem 2rem 1.8rem 1fr 1.6rem 2rem 2rem 1rem;
+  align-items: center;
+}
+.dingdantop .dingdan .b_list .b_item > div {
+  padding: 0 0.15rem;
+  margin: 0;
+  align-items: center;
+}
+.dingdantop .dingdan .b_list .b_item > div input {
+  padding-left: 0.2rem;
+}
+.dingdantop .dingdan .b_list .b_item .i {
+  border-radius: 0.04rem;
+  width: 0.6rem;
+  height: 0.6rem;
+  border: 0.01rem solid #dddddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.dingdantop .dingdan .b_list .b_item .i img {
+  width: 0.25rem;
+  height: 0.31rem;
+}
+.dingdantop .dingdan .b_list .b_item .name {
+  position: relative;
+}
+.dingdantop .dingdan .b_list .b_item .name img {
+  position: absolute;
+  right: 0.2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  max-width: 0.16rem;
+  pointer-events: none;
+}
+.dingdantop .dingdan .b_list .b_item .delete_this {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.dingdantop .dingdan .b_list .b_item .delete_this img {
+  width: 0.15rem;
+  cursor: pointer;
+}
+.dingdantop .dingdan .b_list .b_item .input_hint {
+  border-radius: 0.04rem 3.95417px;
+  background-color: var(--f);
+  box-shadow: 0px 0px 0.1rem 0px rgba(21, 74, 147, 0.15);
+  color: var(--9);
+  font-size: 0.14rem;
+  padding: 0.08rem 0.12rem;
+  position: absolute;
+  left: 0.15rem;
+  top: calc(100% + 0.06rem);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: all ease 0.3s;
+}
+.dingdantop .dingdan .b_list .b_item .input_hint p {
+  white-space: pre;
+  line-height: 1.2;
+}
+.dingdantop .dingdan .b_list .b_item .hint .input_hint {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.dingdantop .dingdan .b_list .b_item .tishi {
+  font-size: 0.14rem;
+  color: var(--ac);
+  background-color: #fff3e6;
+  border: 0.01rem solid var(--ac);
+  border-radius: 0.04rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.02rem 0.1rem;
+}
+.dingdantop .dingdan .b_list .b_item .tishi_end {
+  font-family: "Poppins-Bold";
+  color: var(--bc);
+}
+.dingdantop .dingdan .b_list .b_item .anniu_this {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+}
+.dingdantop .dingdan .b_list .b_item .anniu_this > div {
+  padding: 0.05rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.dingdantop .dingdan .b_list .b_item .anniu_this img {
+  width: auto;
+}
+.dingdantop .zs {
+  margin-top: 0.15rem;
+}
+.dingdantop .zs p {
+  color: var(--9);
+  font-size: 0.14rem;
+}
+
+.grzx_detail .c_h4 {
+  border-bottom: 0.01rem solid var(--d);
+  margin-bottom: 0.3rem;
+  padding-bottom: 0.3rem;
+}
+.grzx_detail .c_h4 .goback img {
+  width: auto;
+}
+.grzx_detail .xx {
+  display: flex;
+  justify-content: space-between;
+}
+.grzx_detail ul {
+  gap: 0.1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+}
+.grzx_detail ul li p {
+  display: flex;
+  gap: 0.1rem;
+}
+.grzx_detail ul li span {
+  min-width: 1.2rem;
+  display: flex;
+}
+.grzx_detail .goback {
+  font-size: 0.14rem;
+  color: var(--6);
+}
+.grzx_detail .goback:hover {
+  color: var(--bc);
+}
+
+.grzx_detail_2 {
+  padding-bottom: 1.2rem;
+}
+.grzx_detail_2 .st_formBox .b_item {
+  margin-top: 0.1rem;
+  gap: 0.15rem;
+}
+.grzx_detail_2 .st_formBox .b_item p {
+  background-color: #f7f7f7;
+  border: 0.01rem solid #e3e3e3;
+  border-radius: 0.04rem;
+  flex: 1;
+  padding: 0.12rem 0.2rem;
+  font-size: 0.14rem;
+}
+.grzx_detail_2 .quote_2_Box {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: 0.01rem solid var(--d);
+}
+.grzx_detail_2 .quote_options {
+  background-color: var(--f);
+  padding: 0.35rem;
+  border-radius: 0.08rem;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .mp .container {
