--- a/src/scss/layout/_member.scss
+++ b/src/scss/layout/_member.scss
@@ -69,7 +69,7 @@
     padding: 0.2rem 0;
 
     .q_title {
-        padding: 0.35rem 0;
+        padding: 0.3rem 0;
 
         p {
             span {
@@ -438,4 +438,491 @@
 
 .quote_btn {
     background-color: var(--bl);
+}
+
+
+.login_Box {
+    display: flex;
+    background: linear-gradient(0deg, #b5d0f5, #e5f0fe);
+    padding-top: 1rem;
+
+    .login_Boxcont {
+        background: var(--f);
+        border-radius: 0.16rem;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        min-height: 3rem;
+        box-shadow: 0px 0.1rem 0.5rem 0px rgba(21, 74, 147, 0.15);
+        padding: 0.8rem;
+        position: relative;
+
+        .title {
+            .t {
+                margin-bottom: 0.1rem;
+                line-height: 1.2;
+            }
+
+            .s {
+                color: var(--6);
+            }
+
+            img {
+                width: 2.73rem;
+                margin-bottom: 0.5rem;
+                margin-left: auto;
+                margin-right: auto;
+                display: flex;
+            }
+        }
+
+        form {
+            margin-top: 0.5rem;
+        }
+
+        .registerlink {
+            position: absolute;
+            right: 0.3rem;
+            top: 0.2rem;
+
+            a {
+                text-decoration: underline;
+
+                &:hover {
+                    color: var(--bc);
+                }
+            }
+        }
+
+        .otherLink {
+            a:hover {
+                color: var(--bc);
+            }
+        }
+    }
+
+    .login_contact {
+        max-width: 6rem;
+        width: 100%;
+
+        .title {
+            border-bottom: 0.01rem solid #b1c6e2;
+            margin-bottom: 0.25rem;
+            padding-bottom: 0.25rem;
+            padding-top: 0.7rem;
+        }
+
+        .c_contact_way {
+            padding-top: 0.1rem;
+
+            .c_contact_way_xin {
+                grid-template-columns: 0.3rem 1fr;
+                gap: 0.15rem;
+            }
+
+            img {
+                width: 0.22rem;
+                height: 0.22rem;
+                transform: translateY(0.02rem);
+            }
+        }
+
+        .threeico {
+            border-radius: 0.08rem;
+            position: relative;
+            overflow: hidden;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 0.01rem solid #fff;
+            margin-top: 0.4rem;
+
+            .th_item {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                flex: 1;
+                padding: 0 0.2rem;
+                position: relative;
+                z-index: 2;
+            }
+
+            img {
+                width: 1.1rem;
+                height: 1.1rem;
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                right: 0;
+                top: 0.85rem;
+                width: 80%;
+                margin: 0 auto;
+                border-top: 0.01rem dashed #fff;
+            }
+        }
+    }
+}
+
+.forgot_password {
+    .container {
+        max-width: 5.6rem;
+        background: var(--f);
+        border-radius: 0.08rem;
+        min-height: 1rem;
+    }
+
+    .title {
+        padding: 0.3rem 0;
+        border-bottom: 0.01rem solid var(--d);
+
+        img {
+            width: 0.12rem;
+            cursor: pointer;
+        }
+    }
+
+    .content {
+        padding-top: 0.5rem;
+
+        img {
+            width: 1.3rem;
+            margin: 0 auto;
+            display: flex;
+            transition: all var(--ease) 0.3s;
+
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
+
+        p {
+            max-width: 4.4rem;
+        }
+
+        .tellink {
+            font-size: 0.24rem;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            color: var(--bc);
+            font-family: "Poppins-Medium";
+            transition: all var(--ease) 0.3s;
+
+            &:hover {
+                color: var(--ac);
+            }
+        }
+    }
+}
+
+.grzx {
+    .grzx_1 {
+        width: 100%;
+        background-color: var(--bl);
+        background-image: url(/src/images/img-86.png);
+        background-repeat: no-repeat;
+        background-position: right -0.4rem;
+        justify-content: space-between;
+        gap: 0.12rem;
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem 0.4rem;
+
+        &+.dingdantop {
+            margin-top: 0.6rem;
+        }
+
+        .xx {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.1rem;
+
+            li {
+                p {
+                    display: flex;
+                    gap: 0.1rem;
+                }
+
+                span {
+                    min-width: 1.2rem;
+                    display: flex;
+                }
+            }
+        }
+
+        a {
+            display: flex;
+            gap: 0.1rem;
+            white-space: pre;
+
+            img {
+                width: 0.08rem;
+            }
+        }
+    }
+}
+
+.dingdantop {
+    .xiangxi {
+        display: flex;
+        align-items: center;
+        gap: 0.1rem;
+        margin-bottom: 0.15rem;
+        margin-top: 0.4rem;
+
+        li {
+            display: flex;
+            gap: 0.1rem;
+            font-size: 0.14rem;
+
+            &:first-child {
+                span {
+                    color: var(--bc);
+                }
+            }
+        }
+
+        li+span {
+            font-size: 0.12rem;
+            color: var(--9);
+        }
+    }
+
+    .dingdan {
+        background-color: var(--f);
+
+        .t {
+            height: 0.6rem;
+            background: var(--bc);
+            color: var(--f);
+            line-height: 0.6rem;
+            padding: 0 0.2rem;
+            display: grid;
+            grid-template-columns: 1rem 2rem 1.8rem 1fr 1.6rem 2rem 2rem 1rem;
+
+            p {
+                padding: 0 0.15rem;
+            }
+        }
+
+        .b_list {
+            padding: 0.2rem;
+            border: 0.01rem solid var(--d);
+            overflow: hidden;
+            border-radius: 0.08rem;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+
+            .b_item {
+                display: grid;
+                grid-template-columns: 1rem 2rem 1.8rem 1fr 1.6rem 2rem 2rem 1rem;
+                align-items: center;
+
+                >div {
+                    padding: 0 0.15rem;
+                    margin: 0;
+                    align-items: center;
+
+                    input {
+                        padding-left: 0.2rem;
+                    }
+                }
+
+                .i {
+                    border-radius: 0.04rem;
+                    width: 0.6rem;
+                    height: 0.6rem;
+                    border: 0.01rem solid #dddddd;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+
+                    img {
+                        width: 0.25rem;
+                        height: 0.31rem;
+                    }
+                }
+
+                .name {
+                    position: relative;
+
+                    img {
+                        position: absolute;
+                        right: 0.2rem;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        max-width: 0.16rem;
+                        pointer-events: none;
+                    }
+                }
+
+                .delete_this {
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+
+                    img {
+                        width: 0.15rem;
+                        cursor: pointer;
+                    }
+                }
+
+                .input_hint {
+                    border-radius: 0.04rem 3.95417px;
+                    background-color: var(--f);
+                    box-shadow: 0px 0px 0.1rem 0px rgba(21, 74, 147, 0.15);
+                    color: var(--9);
+                    font-size: 0.14rem;
+                    padding: 0.08rem 0.12rem;
+                    position: absolute;
+                    left: 0.15rem;
+                    top: calc(100% + 0.06rem);
+                    opacity: 0;
+                    visibility: hidden;
+                    pointer-events: none;
+                    transition: all ease 0.3s;
+
+                    p {
+                        white-space: pre;
+                        line-height: 1.2;
+                    }
+                }
+
+                .hint .input_hint {
+                    opacity: 1;
+                    visibility: visible;
+                    pointer-events: auto;
+                }
+
+                .tishi {
+                    font-size: 0.14rem;
+                    color: var(--ac);
+                    background-color: #fff3e6;
+                    border: 0.01rem solid var(--ac);
+                    border-radius: 0.04rem;
+                    width: fit-content;
+                    padding: 0.02rem 0.1rem;
+                }
+
+                .tishi_end {
+                    font-family: "Poppins-Bold";
+                    color: var(--bc);
+                }
+
+                .anniu_this {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.1rem;
+
+                    >div {
+                        padding: 0.05rem;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        cursor: pointer;
+                    }
+
+                    img {
+                        width: auto;
+                    }
+                }
+            }
+        }
+    }
+
+    .zs {
+        margin-top: 0.15rem;
+
+        p {
+            color: var(--9);
+            font-size: 0.14rem;
+        }
+    }
+}
+
+.grzx_detail {
+    .c_h4 {
+        border-bottom: 0.01rem solid var(--d);
+        margin-bottom: 0.3rem;
+        padding-bottom: 0.3rem;
+
+        .goback {
+            img {
+                width: auto;
+            }
+        }
+    }
+
+    .xx {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    ul {
+        gap: 0.1rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 100%;
+
+        li {
+            p {
+                display: flex;
+                gap: 0.1rem;
+            }
+
+            span {
+                min-width: 1.2rem;
+                display: flex;
+            }
+        }
+    }
+
+    .goback {
+        font-size: 0.14rem;
+        color: var(--6);
+
+        &:hover {
+            color: var(--bc);
+        }
+    }
+}
+
+.grzx_detail_2 {
+    padding-bottom: 1.2rem;
+
+    .st_formBox .b_item {
+        margin-top: 0.1rem;
+        gap: 0.15rem;
+    }
+
+    .st_formBox .b_item p {
+        background-color: #f7f7f7;
+        border: 0.01rem solid #e3e3e3;
+        border-radius: 0.04rem;
+        flex: 1;
+        padding: 0.12rem 0.2rem;
+        font-size: 0.14rem;
+    }
+
+    .quote_2_Box {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: 0.01rem solid var(--d);
+    }
+
+    .quote_options {
+        background-color: var(--f);
+        padding: 0.35rem;
+        border-radius: 0.08rem;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
 }
