--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,3 +1,139 @@
 <header>
-    11321321
+    <div class="header_top f-14 flex j-end a-center g-30">
+        <p><a href="#"><img src="src/images/img-107.png" alt="tel"></a></p>
+        <p><a href="#"><img src="src/images/img-106.png" alt="search"></a></p>
+        <div class="grzxrukou flex g-10 a-center">
+            <p><a href="#">Login</a></p><span>|</span>
+            <p><a href="#">Register</a></p>
+        </div>
+    </div>
+    <div class="header_bottom">
+        <div class="logo">
+            <a href="/"><img src="src/images/img-108.png" alt="logo"></a>
+        </div>
+        <div class="nav">
+            <ul class="navBox flex a-center">
+                <li class="nav_item">
+                    <p class="nav_text"><a href="/">Home</a></p>
+                </li>
+                <li class="nav_item teshu have_children">
+                    <p class="nav_text"><a href="/technology">Technology</a></p>
+                    <div class="nav_children">
+                        <div class="container">
+                            <div class="nav_children_left">
+                                <div class="nav_children_tab">
+                                    <p><a href="#">Precision manufacturing process</a></p>
+                                    <p><a href="#">Special arts and crafts</a></p>
+                                </div>
+                                <div class="nav_children_more">
+                                    <a href="#"><span>View materials</span><img src="src/images/img-103.png"
+                                            alt="navmore"></a>
+                                </div>
+                            </div>
+                            <div class="nav_children_right">
+                                <div>
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav_item">
+                    <p class="nav_text"><a href="/solution">Solution</a></p>
+                </li>
+                <li class="nav_item">
+                    <p class="nav_text"><a href="/case">Case</a></p>
+                </li>
+                <li class="nav_item have_children">
+                    <p class="nav_text"><a href="/service">Service and support</a></p>
+                    <div class="nav_children">
+                        <a href="#">Our services</a>
+                        <a href="#">FAQ</a>
+                    </div>
+                </li>
+                <li class="nav_item">
+                    <p class="nav_text"><a href="/about">About us</a></p>
+                </li>
+                <li class="nav_item">
+                    <p class="nav_text"><a href="/news">News</a></p>
+                </li>
+                <li class="nav_item">
+                    <p class="nav_text"><a href="/contact">Contact us</a></p>
+                </li>
+            </ul>
+        </div>
+        <div class="mob_ico">
+            <svg t="1750777028196" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                p-id="4361" width="200" height="200">
+                <path
+                    d="M927.25551408 262.13793185H96.96293925c-27.37948445 0-49.56463408-21.73610667-49.56463407-48.54518518s22.19728592-48.54518518 49.56463407-48.54518519h830.29257483c27.37948445 0 49.56463408 21.73610667 49.56463407 48.54518519 0 26.82121482-22.19728592 48.54518518-49.56463407 48.54518518zM927.25551408 837.21633185H96.96293925c-27.37948445 0-49.56463408-21.73610667-49.56463407-48.54518518s22.19728592-48.54518518 49.56463407-48.54518519h830.29257483c27.37948445 0 49.56463408 21.73610667 49.56463407 48.54518519s-22.19728592 48.54518518-49.56463407 48.54518518zM927.25551408 550.29001482H96.96293925c-27.37948445 0-49.56463408-21.73610667-49.56463407-48.54518519s22.19728592-48.54518518 49.56463407-48.54518518h830.29257483c27.37948445 0 49.56463408 21.73610667 49.56463407 48.54518518s-22.19728592 48.54518518-49.56463407 48.54518519z"
+                    p-id="4362"></path>
+            </svg>
+        </div>
+    </div>
 </header>
