补漏导航手机端的有子导航就显示的图标按钮

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3856,6 +3856,9 @@ header {
   .mob_ico {
     display: none;
   }
+  .nav_children_arrow {
+    display: none;
+  }
 }
 .p_header {
   border-bottom: 0.01rem solid var(--d);
