--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -17,7 +17,12 @@
                     <p class="nav_text"><a href="/">Home</a></p>
                 </li>
                 <li class="nav_item teshu have_children">
-                    <p class="nav_text"><a href="/technology">Technology</a></p>
+                    <p class="nav_text">
+                        <a href="/technology">Technology</a>
+                        <div class="nav_children_arrow">
+                            <img src="src/images/img-103.png" alt="nav">
+                        </div>
+                    </p>
                     <div class="nav_children">
                         <div class="container">
                             <div class="nav_children_left">
@@ -110,7 +115,12 @@
                     <p class="nav_text"><a href="/case">Case</a></p>
                 </li>
                 <li class="nav_item have_children">
-                    <p class="nav_text"><a href="/service">Service and support</a></p>
+                    <p class="nav_text">
+                        <a href="/service">Service and support</a>
+                        <div class="nav_children_arrow">
+                            <img src="src/images/img-103.png" alt="nav">
+                        </div>
+                    </p>
                     <div class="nav_children">
                         <a href="#">Our services</a>
                         <a href="#">FAQ</a>
