--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,23 +1,4 @@
 @charset "UTF-8";
-:root {
-  --cw: 15rem;
-  --ease: ease;
-  --easein: ease-in;
-  --easeout: ease-out;
-  --easeinout: ease-in-out;
-  --f: #fff;
-  --0: #000;
-  --1: #111;
-  --6: #666;
-  --9: #999;
-  --d: #ddd;
-  --f6: #f6f6f6;
-  --bc: #154a93;
-  --bc_c: #0e3b7b;
-  --bl: #eaf3ff;
-  --ac: #e27c11;
-}
-
 html {
   scroll-behavior: smooth;
   font-size: 5.2083333333vw;
@@ -2304,6 +2285,25 @@ html {
     grid-template-columns: repeat(6, 1fr);
   }
 }
+:root {
+  --cw: 15rem;
+  --ease: ease;
+  --easein: ease-in;
+  --easeout: ease-out;
+  --easeinout: ease-in-out;
+  --f: #fff;
+  --0: #000;
+  --1: #111;
+  --6: #666;
+  --9: #999;
+  --d: #ddd;
+  --f6: #f6f6f6;
+  --bc: #154a93;
+  --bc_c: #0e3b7b;
+  --bl: #eaf3ff;
+  --ac: #e27c11;
+}
+
 @font-face {
   font-family: "Poppins";
   src: url("../fonts/Poppins-Regular.woff2") format("woff2"), url("../fonts/Poppins-Regular.woff") format("woff");
@@ -2648,7 +2648,7 @@ body {
   overflow: hidden;
 }
 
-.initialization__page [data-rolling] {
+[data-rolling] {
   overflow: hidden;
   width: -moz-min-content;
   width: min-content;
@@ -2657,11 +2657,17 @@ body {
   flex-direction: row;
 }
 
-.initialization__page [data-rolling] > * {
+[data-rolling] > * {
   display: flex;
+  gap: 0.3rem;
 }
 
-.initialization__page [data-rolling] li {
+[data-rolling] > * > div {
+  display: flex;
+  gap: 0.3rem;
+}
+
+[data-rolling] li {
   display: flex;
   flex-wrap: wrap;
   white-space: nowrap;
@@ -6808,4 +6814,599 @@ footer .footer_menu .search .formBtn:hover {
 footer .footer_menu .search .formBtn img {
   width: 0.16rem;
   height: 0.16rem;
+}
+
+.homeBanner .swiper-slide {
+  display: grid;
+}
+.homeBanner .swiper-slide > div {
+  grid-area: 1/1;
+}
+.homeBanner .swiper-slide .index_title {
+  padding: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+.homeBanner .swiper-slide .index_title .index_title_top {
+  text-align: left;
+}
+.homeBanner .swiper-slide .index_title .index_title_top p:last-child {
+  font-style: italic;
+}
+.homeBanner .swiper-slide .index_title .index_title_bottom {
+  margin-top: 0.4rem;
+  text-align: left;
+}
+.homeBanner .swiper-slide .index_title .index_title_bottom a {
+  margin: 0.24rem auto 0 0;
+}
+.homeBanner .swiper-slide .index_title p {
+  color: var(--f);
+  line-height: 1.3;
+}
+.homeBanner .index_banner_arr {
+  height: 1.15rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.homeBanner .index_banner_arr .container {
+  position: static;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.1rem;
+  position: relative;
+}
+.homeBanner .index_banner_arr .container img {
+  width: 0.17rem;
+}
+.homeBanner .index_banner_arr .container .swiper-button-prev,
+.homeBanner .index_banner_arr .container .swiper-button-next {
+  position: static;
+  margin: 0;
+}
+.homeBanner .index_banner_arr .container .swiper-button-prev::after,
+.homeBanner .index_banner_arr .container .swiper-button-next::after {
+  display: none;
+}
+.homeBanner .index_banner_arr .container .swiper-pagination {
+  position: static;
+}
+.homeBanner .index_banner_arr .container .swiper-pagination span {
+  background-color: #8f969d;
+  width: 0.3rem;
+  height: 0.03rem;
+  border-radius: 0;
+  opacity: 1;
+}
+.homeBanner .index_banner_arr .container .swiper-pagination span.swiper-pagination-bullet-active {
+  background-color: var(--bc);
+}
+.homeBanner .index_banner_arr .container .swiper-pagination {
+  position: static;
+  bottom: auto;
+  top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+}
+
+.i2 .a2_info {
+  gap: 0;
+  grid-template-columns: auto;
+  background-image: url(../../src/images/img-114.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+}
+.i2 .a2_info .container {
+  display: grid;
+  gap: 0.2rem;
+  grid-template-columns: 3fr 5fr;
+}
+.i2 .i2_img {
+  height: 5.6rem;
+  position: relative;
+  overflow: hidden;
+  background-image: url(../../src/images/img-113.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+.i2 h3 {
+  position: relative;
+}
+.i2 h3::after {
+  content: "";
+  width: 0.32rem;
+  height: 0.32rem;
+  position: absolute;
+  left: -0.5rem;
+  top: -0.05rem;
+  background-color: var(--bc);
+  border-radius: 100%;
+}
+.i2 .c_rich p {
+  margin-bottom: 0.1rem;
+}
+.i2 .ab_bottom {
+  height: var(--asb);
+  background: url(../../src/images/img-119.jpg);
+  background-size: cover;
+  background-position: center;
+  transition: all var(--ease) 0.3s 0s;
+  padding-bottom: 1.8rem;
+}
+.i2 .ab_bottom ul {
+  display: flex;
+  height: 100%;
+}
+.i2 .ab_bottom ul li {
+  flex: 1;
+  padding: 0.6rem 0.32rem 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  height: 100%;
+  transition: all var(--ease) 0.3s;
+  display: grid;
+  grid-template-columns: 0.32rem 1fr;
+  gap: 0.3rem;
+  align-items: baseline;
+}
+.i2 .ab_bottom ul li h5 {
+  font-weight: normal;
+  font-family: "Poppins";
+  word-break: break-word;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  overflow: hidden;
+  color: var(--0);
+}
+.i2 .ab_bottom ul li p {
+  font-size: 0.68rem;
+  line-height: 1.1;
+  font-family: "Oswald";
+  color: var(--0);
+}
+.i2 .ab_bottom ul li p span {
+  font-size: 0.3rem;
+}
+.i2 .ab_bottom ul li:last-child {
+  border-right: 0;
+}
+.i2 .ab_bottom_info {
+  transform: translateY(-0.07rem);
+}
+.i2 .ab_bottom_title {
+  padding: 1.6rem 0 0.8rem;
+}
+.i2 .ab_bottom_title .t1 {
+  font-size: 0.6rem;
+  line-height: 1.2;
+  text-align: center;
+  color: var(--0);
+}
+.i2 .ab_bottom_title .t1 span {
+  color: var(--bc);
+}
+.i2 .ab_bottom_title .t2 {
+  text-align: center;
+}
+.i2 .ab_bottom_title > span {
+  width: 0.8rem;
+  height: 0.03rem;
+  margin: 0.14rem auto 0.3rem;
+  display: flex;
+  background: var(--bc);
+}
+.i2 .ab_bottom_three ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3rem;
+}
+.i2 .ab_bottom_three ul li {
+  border-width: 1px;
+  border-color: var(--d);
+  border-style: solid;
+  border-radius: 0.08rem;
+  background: linear-gradient(90deg, rgb(235, 235, 235) 0%, rgb(249, 249, 249) 100%);
+  display: grid;
+  grid-template-columns: 1fr 1rem;
+  gap: 0.1rem;
+  align-items: center;
+  padding: 0.2rem;
+  padding-left: 0.3rem;
+  cursor: pointer;
+}
+.i2 .ab_bottom_three ul li p {
+  font-size: 0.24rem;
+}
+.i2 .ab_bottom_three ul li .ab_bottom_three_ico {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  background: var(--f);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  transition: all var(--ease) 0.3s;
+}
+.i2 .ab_bottom_three ul li .ab_bottom_three_ico img {
+  grid-area: 1/1;
+  width: 0.4rem;
+  transition: all var(--ease) 0.3s;
+}
+.i2 .ab_bottom_three ul li .ab_bottom_three_ico img:last-child {
+  opacity: 0;
+}
+.i2 .ab_bottom_three ul li:hover .ab_bottom_three_ico {
+  background-color: var(--bc);
+}
+.i2 .ab_bottom_three ul li:hover .ab_bottom_three_ico img:first-child {
+  opacity: 0;
+}
+.i2 .ab_bottom_three ul li:hover .ab_bottom_three_ico img:last-child {
+  opacity: 1;
+}
+
+.i3 {
+  height: 74vh;
+  position: relative;
+  overflow: hidden;
+}
+.i3 .videos_bg {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.i3 .videos_bg video {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.i3 .video_title {
+  background: rgba(21, 73, 147, 0.6);
+  position: relative;
+  z-index: 2;
+  display: flex;
+}
+.i3 .video_title .container {
+  align-items: center;
+  gap: 0.2rem;
+  display: flex;
+  justify-content: space-between;
+}
+.i3 .video_title_info {
+  width: auto;
+  padding: 0.2rem 0;
+  position: relative;
+  z-index: 2;
+}
+.i3 .video_title_info h3 {
+  color: var(--f);
+  line-height: 1.2;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.i3 .video_title_info h3 span {
+  font-weight: normal;
+  line-height: 1.2;
+}
+.i3 .video_title_info h3::before {
+  content: "";
+  width: 0.32rem;
+  height: 0.32rem;
+  border-radius: 100%;
+  background-color: var(--ac);
+  position: absolute;
+  left: -0.5rem;
+}
+.i3 .video_title_info p {
+  color: var(--f);
+}
+.i3 .video_title_btn a {
+  width: 3.6rem;
+  height: 3.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  position: relative;
+}
+.i3 .video_title_btn a svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: all var(--ease) 0.8s;
+  transform: rotate(-90deg);
+}
+.i3 .video_title_btn a img {
+  width: 0.2rem;
+  transition: all var(--ease) 0.8s;
+}
+.i3 .video_title_btn a:hover svg {
+  transform: rotate(0deg);
+}
+.i3 .video_title_btn a:hover img {
+  transform: scale(1.1);
+}
+
+.i4 .c_h3 h3 {
+  position: relative;
+}
+.i4 .c_h3 h3::before {
+  content: "";
+  width: 0.32rem;
+  height: 0.32rem;
+  border-radius: 100%;
+  background-color: var(--bc);
+  position: absolute;
+  left: -0.5rem;
+}
+.i4 .c_h3 a {
+  color: var(--0);
+  transition: all var(--ease) 0.3s;
+}
+.i4 .c_h3 a:hover {
+  color: var(--bc);
+}
+.i4 .c_h3 a:hover span {
+  background-color: var(--bc);
+}
+.i4 .c_h3 a span {
+  background-color: var(--0);
+  border-radius: 0.04rem;
+  width: 0.23rem;
+  height: 0.23rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all var(--ease) 0.3s;
+}
+.i4 .c_h3 a span img {
+  width: 0.14rem;
+}
+.i4 .c_list_1 {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(3.5rem, 1fr));
+}
+.i4 .c_item {
+  border-top: 0;
+  border: 0.01rem solid var(--d);
+  height: 4.3rem;
+}
+.i4 .c_item .c_img {
+  height: 3rem;
+  width: calc(100% + 0.02rem);
+  transform: translate(-0.01rem, -0.01rem);
+}
+.i4 .c_item .c_img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all var(--ease) 0.3s;
+}
+.i4 .c_item .c_info {
+  transition: all var(--ease) 0.3s;
+  z-index: 2;
+  height: 2rem;
+}
+.i4 .c_item .c_info .i {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 100%;
+  display: grid;
+  place-content: center;
+  background: var(--f);
+  transition: opacity var(--ease) 0.3s;
+}
+.i4 .c_item .c_info .i img {
+  width: 0.15rem;
+}
+.i4 .c_item .c_info .t {
+  color: var(--0);
+  line-height: 1.2;
+  transition: color var(--ease) 0.3s;
+}
+.i4 .c_item .c_info .s {
+  word-break: break-word;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  overflow: hidden;
+  margin-top: 0.04rem;
+  transition: color var(--ease) 0.3s;
+}
+.i4 .c_item:hover .c_info {
+  transform: translateY(-0.7rem);
+  background-color: var(--bc);
+}
+.i4 .c_item:hover .c_info > * {
+  color: var(--f);
+}
+.i4 .c_item:hover .c_info .i {
+  opacity: 1;
+}
+.i4 .c_item:hover .c_img img {
+  transform: scale(1.1);
+}
+.i4 .case_line {
+  width: 100%;
+  height: 0.01rem;
+  background-color: var(--d);
+  margin: 0.4rem auto;
+  -webkit-mask-image: linear-gradient(var(--mask-direction, to right), hsla(0, 0%, 0%, 0), hsl(0, 0%, 0%) 20%, hsl(0, 0%, 0%) 80%, hsla(0, 0%, 0%, 0));
+  mask-image: linear-gradient(var(--mask-direction, to right), hsla(0, 0%, 0%, 0), hsl(0, 0%, 0%) 20%, hsl(0, 0%, 0%) 80%, hsla(0, 0%, 0%, 0));
+}
+.i4 .case_rolling {
+  display: flex;
+  gap: 0.3rem;
+  width: 100%;
+}
+.i4 .case_rolling .case_rolling_img {
+  border-radius: 0.08rem;
+  position: relative;
+  overflow: hidden;
+  width: 2.25rem;
+}
+
+.i5 {
+  background-color: var(--bl);
+}
+.i5 .c_h3 h3 {
+  position: relative;
+}
+.i5 .c_h3 h3::before {
+  content: "";
+  width: 0.32rem;
+  height: 0.32rem;
+  border-radius: 100%;
+  background-color: var(--bc);
+  position: absolute;
+  left: -0.5rem;
+}
+.i5 .c_h3 a {
+  color: var(--0);
+  transition: all var(--ease) 0.3s;
+}
+.i5 .c_h3 a:hover {
+  color: var(--bc);
+}
+.i5 .c_h3 a:hover span {
+  background-color: var(--bc);
+}
+.i5 .c_h3 a span {
+  background-color: var(--0);
+  border-radius: 0.04rem;
+  width: 0.23rem;
+  height: 0.23rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all var(--ease) 0.3s;
+}
+.i5 .c_h3 a span img {
+  width: 0.14rem;
+}
+.i5 .news_item {
+  transition: all var(--ease) 0.3s;
+  position: relative;
+}
+.i5 .news_item::after {
+  content: "";
+  border-top: 0.01rem solid var(--f);
+  background: linear-gradient(90deg, rgb(239, 246, 255) 0%, rgb(245, 250, 255) 100%);
+  opacity: 0;
+  transition: all var(--ease) 0.3s;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+.i5 .news_item .news_box {
+  border-bottom: 0.01rem solid var(--d);
+  height: 1.3rem;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  display: grid;
+  grid-template-columns: 1.5rem 2rem 1fr 0.2rem;
+}
+.i5 .news_item .news_box p {
+  color: var(--0);
+}
+.i5 .news_item .news_title p {
+  font-size: 0.24rem;
+  font-family: "Poppins-Medium";
+}
+.i5 .news_item .news_title p:hover {
+  color: var(--bc);
+}
+.i5 .news_item .news_type p {
+  font-size: 0.14rem;
+  border-radius: 0.04rem;
+  border: 0.01rem solid var(--bc);
+  padding: 0.04rem 0.13rem;
+  text-align: center;
+  color: var(--bc);
+  width: -moz-fit-content;
+  width: fit-content;
+  transition: all var(--ease) 0.3s;
+}
+.i5 .news_item .news_type p:hover {
+  background-color: var(--bc);
+  color: var(--f);
+}
+.i5 .news_item .news_more img {
+  width: 0.15rem;
+}
+.i5 .news_item .news_img {
+  position: fixed;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+}
+.i5 .news_item .news_img .news_img_box {
+  transform: scale(0);
+  opacity: 0;
+  transition: all var(--ease) 0.6s;
+}
+.i5 .news_item:hover .news_img_box {
+  opacity: 1;
+}
+.i5 .news_item:hover::after {
+  opacity: 1;
+}
+.i5 .news_list:hover .news_img_box {
+  transform: scale(1);
+}
+
+.i6 .c_h3 h3 {
+  position: relative;
+  line-height: 1.2;
+}
+.i6 .c_h3 h3::before {
+  content: "";
+  width: 0.32rem;
+  height: 0.32rem;
+  border-radius: 100%;
+  background-color: var(--bc);
+  position: absolute;
+  left: -0.5rem;
+}
+.i6 .c_h3 p {
+  font-family: "Poppins-Regular";
+  line-height: 1.2;
+}
+.i6 .l_column {
+  margin-top: 0.45rem;
+  border-radius: 0.08rem;
+  position: relative;
+  overflow: hidden;
+}
+.i6 .l_column .l_technology_1_img img {
+  max-width: 100%;
+}
+.i6 .l_column .l_technology_1_info {
+  width: 100%;
+  max-width: 7rem;
+  padding-bottom: 0.4rem;
 }/*# sourceMappingURL=main.css.map */
