--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,731 @@
+@use 'common/tool' as *;
 @use 'core/_var';
 @use 'common/common';
 @use 'element/element';
 @use 'layout/layout';
+
+.homeBanner {
+    .swiper-slide {
+        display: grid;
+
+        >div {
+            grid-area: 1 / 1;
+        }
+
+        .index_title {
+            padding: 0.6rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end;
+
+            .index_title_top {
+                text-align: left;
+
+                p:last-child {
+                    font-style: italic;
+                }
+            }
+
+            .index_title_bottom {
+                margin-top: 0.4rem;
+                text-align: left;
+
+                a {
+                    margin: 0.24rem auto 0 0;
+                }
+            }
+
+            p {
+                color: var(--f);
+                line-height: 1.3;
+            }
+        }
+    }
+
+    .index_banner_arr {
+        height: 1.15rem;
+        position: relative;
+        display: flex;
+        align-items: center;
+
+        .container {
+            position: static;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 0.1rem;
+            position: relative;
+
+            img {
+                width: 0.17rem;
+            }
+
+            .swiper-button-prev,
+            .swiper-button-next {
+                position: static;
+                margin: 0;
+
+                &::after {
+                    display: none;
+                }
+            }
+
+            .swiper-pagination {
+                position: static;
+
+                span {
+                    background-color: #8f969d;
+                    width: 0.3rem;
+                    height: 0.03rem;
+                    border-radius: 0;
+                    opacity: 1;
+
+                    &.swiper-pagination-bullet-active {
+                        background-color: var(--bc);
+                    }
+                }
+            }
+
+            .swiper-pagination {
+                position: static;
+                bottom: auto;
+                top: auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: auto;
+            }
+        }
+    }
+}
+
+.i2 {
+
+    .a2_info {
+        gap: 0;
+        grid-template-columns: auto;
+        background-image: url(../../src/images/img-114.png);
+        background-repeat: no-repeat;
+        background-position: left bottom;
+
+        .container {
+            display: grid;
+            gap: 0.2rem;
+            grid-template-columns: 3fr 5fr;
+        }
+    }
+
+    .i2_img {
+        height: 5.6rem;
+        position: relative;
+        overflow: hidden;
+        background-image: url(../../src/images/img-113.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+
+    h3 {
+        position: relative;
+
+        &::after {
+            content: "";
+            width: 0.32rem;
+            height: 0.32rem;
+            position: absolute;
+            left: -0.5rem;
+            top: -0.05rem;
+            background-color: var(--bc);
+            border-radius: 100%;
+        }
+    }
+
+    .c_rich {
+        p {
+            margin-bottom: 0.1rem;
+        }
+    }
+
+    .ab_bottom {
+        height: var(--asb);
+        background: url(../../src/images/img-119.jpg);
+        background-size: cover;
+        background-position: center;
+        transition: all var(--ease) 0.3s 0s;
+        padding-bottom: 1.8rem;
+    }
+
+    .ab_bottom ul {
+        display: flex;
+        height: 100%;
+    }
+
+    .ab_bottom ul li {
+        flex: 1;
+        padding: 0.6rem 0.32rem 0;
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        border-right: 1px solid rgba(255, 255, 255, 0.2);
+        height: 100%;
+        transition: all var(--ease) 0.3s;
+        display: grid;
+        grid-template-columns: 0.32rem 1fr;
+        gap: 0.3rem;
+        align-items: baseline;
+
+        h5 {
+            font-weight: normal;
+            font-family: 'Poppins';
+            @include ellipsis(1);
+            color: var(--0);
+        }
+
+        p {
+            font-size: 0.68rem;
+            line-height: 1.1;
+            font-family: "Oswald";
+
+            color: var(--0);
+
+            span {
+                font-size: 0.3rem;
+            }
+        }
+    }
+
+    .ab_bottom ul li:last-child {
+        border-right: 0;
+    }
+
+    .ab_bottom_info {
+        transform: translateY(-0.07rem);
+    }
+
+    .ab_bottom_title {
+        padding: 1.6rem 0 0.8rem;
+
+        .t1 {
+            font-size: 0.6rem;
+            line-height: 1.2;
+            text-align: center;
+            color: var(--0);
+
+            span {
+                color: var(--bc);
+            }
+        }
+
+        .t2 {
+            text-align: center;
+        }
+
+        >span {
+            width: 0.8rem;
+            height: 0.03rem;
+            margin: 0.14rem auto 0.3rem;
+            display: flex;
+            background: var(--bc);
+        }
+    }
+
+    .ab_bottom_three {
+        ul {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 0.3rem;
+
+            li {
+                border-width: 1px;
+                border-color: var(--d);
+                border-style: solid;
+                border-radius: 0.08rem;
+                background: linear-gradient(90deg, rgb(235, 235, 235) 0%, rgb(249, 249, 249) 100%);
+                display: grid;
+                grid-template-columns: 1fr 1rem;
+                gap: 0.1rem;
+                align-items: center;
+                padding: 0.2rem;
+                padding-left: 0.3rem;
+                cursor: pointer;
+
+                p {
+                    font-size: 0.24rem;
+                }
+
+                .ab_bottom_three_ico {
+                    width: 1rem;
+                    height: 1rem;
+                    border-radius: 100%;
+                    background: var(--f);
+                    display: grid;
+                    justify-content: center;
+                    align-items: center;
+                    transition: all var(--ease) 0.3s;
+
+                    img {
+                        grid-area: 1 / 1;
+                        width: 0.4rem;
+                        transition: all var(--ease) 0.3s;
+
+                        &:last-child {
+                            opacity: 0;
+                        }
+                    }
+                }
+
+                &:hover {
+                    .ab_bottom_three_ico {
+                        background-color: var(--bc);
+
+                        img {
+                            &:first-child {
+                                opacity: 0;
+                            }
+
+                            &:last-child {
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.i3 {
+    height: 74vh;
+    position: relative;
+    overflow: hidden;
+
+    .videos_bg {
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        video {
+            object-fit: cover;
+        }
+    }
+
+    .video_title {
+        background: rgba(21, 73, 147, 0.6);
+        position: relative;
+        z-index: 2;
+        display: flex;
+
+        .container {
+            align-items: center;
+            gap: 0.2rem;
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+
+    .video_title_info {
+        width: auto;
+        padding: 0.2rem 0;
+        position: relative;
+        z-index: 2;
+
+        h3 {
+            color: var(--f);
+            line-height: 1.2;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+
+            span {
+                font-weight: normal;
+                line-height: 1.2;
+            }
+
+            &::before {
+                content: "";
+                width: 0.32rem;
+                height: 0.32rem;
+                border-radius: 100%;
+                background-color: var(--ac);
+                position: absolute;
+                left: -0.5rem;
+            }
+        }
+
+        p {
+            color: var(--f);
+        }
+    }
+
+    .video_title_btn {
+        a {
+            width: 3.6rem;
+            height: 3.6rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            // border: 0.01rem solid var(--f);
+            position: relative;
+
+            svg {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                transition: all var(--ease) 0.8s;
+                transform: rotate(-90deg);
+            }
+
+            img {
+                width: 0.2rem;
+                transition: all var(--ease) 0.8s;
+            }
+
+            &:hover {
+                svg {
+                    transform: rotate(0deg);
+                }
+
+                img {
+                    transform: scale(1.1);
+                }
+            }
+        }
+    }
+}
+
+.i4 {
+    .c_h3 {
+        h3 {
+            position: relative;
+
+            &::before {
+                content: "";
+                width: 0.32rem;
+                height: 0.32rem;
+                border-radius: 100%;
+                background-color: var(--bc);
+                position: absolute;
+                left: -0.5rem;
+            }
+        }
+
+        a {
+            color: var(--0);
+            transition: all var(--ease) 0.3s;
+
+            &:hover {
+                color: var(--bc);
+
+                span {
+                    background-color: var(--bc);
+                }
+            }
+        }
+
+        a span {
+            background-color: var(--0);
+            border-radius: 0.04rem;
+            width: 0.23rem;
+            height: 0.23rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all var(--ease) 0.3s;
+
+            img {
+                width: 0.14rem;
+            }
+        }
+    }
+
+    .c_list_1 {
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(3.5rem, 1fr));
+    }
+
+    .c_item {
+        border-top: 0;
+        border: 0.01rem solid var(--d);
+        height: 4.3rem;
+
+        .c_img {
+            height: 3rem;
+            width: calc(100% + 0.02rem);
+            transform: translate(-0.01rem, -0.01rem);
+
+            img {
+                object-fit: cover;
+                transition: all var(--ease) 0.3s;
+            }
+        }
+
+        .c_info {
+            transition: all var(--ease) 0.3s;
+            z-index: 2;
+            height: 2rem;
+
+            .i {
+                width: 0.5rem;
+                height: 0.5rem;
+                border-radius: 100%;
+                display: grid;
+                place-content: center;
+                background: var(--f);
+                transition: opacity var(--ease) 0.3s;
+
+                img {
+                    width: 0.15rem;
+                }
+            }
+
+            .t {
+                color: var(--0);
+                line-height: 1.2;
+                transition: color var(--ease) 0.3s;
+            }
+
+            .s {
+                @include ellipsis(1);
+                margin-top: 0.04rem;
+                transition: color var(--ease) 0.3s;
+            }
+        }
+
+        &:hover {
+            .c_info {
+                transform: translateY(-0.7rem);
+                background-color: var(--bc);
+
+                >* {
+                    color: var(--f);
+                }
+
+                .i {
+                    opacity: 1;
+                }
+            }
+
+            .c_img {
+                img {
+                    transform: scale(1.1);
+                }
+            }
+        }
+    }
+
+    .case_line {
+        width: 100%;
+        height: 0.01rem;
+        background-color: var(--d);
+        margin: 0.4rem auto;
+        -webkit-mask-image: linear-gradient(var(--mask-direction, to right), hsl(0 0% 0% / 0), hsl(0 0% 0% / 1) 20%, hsl(0 0% 0% / 1) 80%, hsl(0 0% 0% / 0));
+        mask-image: linear-gradient(var(--mask-direction, to right), hsl(0 0% 0% / 0), hsl(0 0% 0% / 1) 20%, hsl(0 0% 0% / 1) 80%, hsl(0 0% 0% / 0));
+    }
+
+    .case_rolling {
+        display: flex;
+        gap: 0.3rem;
+        width: 100%;
+
+        .case_rolling_img {
+            border-radius: 0.08rem;
+            position: relative;
+            overflow: hidden;
+            width: 2.25rem;
+        }
+    }
+}
+
+.i5 {
+    background-color: var(--bl);
+
+    .c_h3 {
+        h3 {
+            position: relative;
+
+            &::before {
+                content: "";
+                width: 0.32rem;
+                height: 0.32rem;
+                border-radius: 100%;
+                background-color: var(--bc);
+                position: absolute;
+                left: -0.5rem;
+            }
+        }
+
+        a {
+            color: var(--0);
+            transition: all var(--ease) 0.3s;
+
+            &:hover {
+                color: var(--bc);
+
+                span {
+                    background-color: var(--bc);
+                }
+            }
+        }
+
+        a span {
+            background-color: var(--0);
+            border-radius: 0.04rem;
+            width: 0.23rem;
+            height: 0.23rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all var(--ease) 0.3s;
+
+            img {
+                width: 0.14rem;
+            }
+        }
+    }
+
+    .news_item {
+        transition: all var(--ease) 0.3s;
+        position: relative;
+
+        &::after {
+            content: '';
+            border-top: 0.01rem solid var(--f);
+            background: linear-gradient(90deg, rgb(239, 246, 255) 0%, rgb(245, 250, 255) 100%);
+            opacity: 0;
+            transition: all var(--ease) 0.3s;
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            height: 100%;
+            width: 100%;
+            z-index: 1;
+        }
+
+        .news_box {
+            border-bottom: 0.01rem solid var(--d);
+            height: 1.3rem;
+            position: relative;
+            z-index: 2;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            display: grid;
+            grid-template-columns: 1.5rem 2rem 1fr 0.2rem;
+
+            p {
+                color: var(--0);
+            }
+        }
+
+        .news_title {
+            p {
+                font-size: 0.24rem;
+                font-family: "Poppins-Medium";
+
+                &:hover {
+                    color: var(--bc);
+                }
+            }
+        }
+
+        .news_type {
+            p {
+                font-size: 0.14rem;
+                border-radius: 0.04rem;
+                border: 0.01rem solid var(--bc);
+                padding: 0.04rem 0.13rem;
+                text-align: center;
+                color: var(--bc);
+                width: fit-content;
+                transition: all var(--ease) 0.3s;
+
+                &:hover {
+                    background-color: var(--bc);
+                    color: var(--f);
+                }
+            }
+        }
+
+        .news_more {
+            img {
+                width: 0.15rem;
+            }
+        }
+
+        .news_img {
+            position: fixed;
+            left: 0;
+            top: 0;
+            pointer-events: none;
+
+            .news_img_box {
+                transform: scale(0);
+                opacity: 0;
+                transition: all var(--ease) 0.6s;
+            }
+        }
+
+
+        &:hover {
+            .news_img_box {
+                opacity: 1;
+            }
+
+            &::after {
+                opacity: 1;
+            }
+        }
+    }
+
+    .news_list:hover .news_img_box {
+        transform: scale(1);
+    }
+}
+
+.i6 {
+    .c_h3 {
+        h3 {
+            position: relative;
+            line-height: 1.2;
+
+            &::before {
+                content: "";
+                width: 0.32rem;
+                height: 0.32rem;
+                border-radius: 100%;
+                background-color: var(--bc);
+                position: absolute;
+                left: -0.5rem;
+            }
+        }
+
+        p {
+            font-family: 'Poppins-Regular';
+            line-height: 1.2;
+        }
+    }
+
+    .l_column {
+        margin-top: 0.45rem;
+        border-radius: 0.08rem;
+        position: relative;
+        overflow: hidden;
+
+        .l_technology_1_img img {
+            max-width: 100%;
+        }
+
+        .l_technology_1_info {
+            width: 100%;
+            max-width: 7rem;
+            padding-bottom: 0.4rem;
+        }
+    }
+}
